Adding pyhton files

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,22 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Initialize PyMongo to work with MongoDBs\n",
-    "conn = 'mongodb://localhost:27017'\n",
-    "client = pymongo.MongoClient(conn)\n",
-    "\n",
-    "# Define database and collection\n",
-    "db = client.mars_db\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -54,12 +38,12 @@
     "html = urllib.request.urlopen('https://mars.nasa.gov/news/').read()\n",
     "soup = bs(html, 'html.parser')\n",
     "\n",
-    "marsnews_db = db.marsnews\n"
+    "mars = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -69,14 +53,12 @@
     "news_title = soup.find_all('div', class_='content_title')\n",
     "for title in news_title:\n",
     "    news_tit = title.text.strip()\n",
-    "    marsnews = {'title': news_tit\n",
-    "            }\n",
-    "    marsnews_db.insert_one(marsnews)"
+    "    mars.update({'newsTitle': news_tit})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -86,9 +68,7 @@
     "news_p = soup.find_all('div', class_='rollover_description_inner')\n",
     "for p in news_p:\n",
     "    text = p.text.strip()\n",
-    "    marstext = {'text': text\n",
-    "            }\n",
-    "    marsnews_db.insert_one(marstext)"
+    "    mars.update({'newsText': text})"
    ]
   },
   {
@@ -100,14 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "jplimg_db = db.jplimg\n",
-    "\n",
     "# Import Splinter and set the chromedriver path\n",
     "from splinter import Browser\n",
     "executable_path = {\"executable_path\": \"./chromedriver\"}\n",
@@ -116,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -139,74 +117,22 @@
     "soup = bs(html, 'html.parser')\n",
     "articles = soup.find('a', class_ = 'button fancybox')\n",
     "browser.click_link_by_partial_text('FULL')\n",
-    "xpath = '//*[@id=\"fancybox-lock\"]/div/div[1]/img' # simple, right?"
+    "xpath = '//*[@id=\"fancybox-lock\"]/div/div[1]/img'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x23dcd877c08>"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Use splinter to Click the \"Mars in natural color in 2007\" image \n",
-    "# to bring up the full resolution image\n",
-    "results = browser.find_by_xpath(xpath)\n",
-    "img = results['src']\n",
-    "featuredImage = {'featuredImage': img\n",
-    "                }\n",
-    "jplimg_db.insert_one(featuredImage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Use the requests library to download and save the image from the `img_url` above\n",
-    "import requests\n",
-    "import shutil\n",
-    "response = requests.get(img, stream=True)\n",
-    "with open('img.png', 'wb') as out_file:\n",
-    "    shutil.copyfileobj(response.raw, out_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"img.png\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the image with IPython.display\n",
-    "from IPython.display import Image\n",
-    "Image(url='img.png')"
+    "# Use splinter to Click the \"Mars in natural color in 2007\" image \n",
+    "# to bring up the full resolution image\n",
+    "results = browser.find_by_xpath(xpath)\n",
+    "img = results['src']\n",
+    "mars.update({'featuredImage': img})"
    ]
   },
   {
@@ -218,31 +144,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "html = urllib.request.urlopen('https://twitter.com/marswxreport?lang=en').read()\n",
+    "soup = bs(html, 'html.parser')\n",
+    "weather = soup.find(\"div\", class_=\"js-tweet-text-container\").text\n",
+    "text = p.text.strip()\n",
+    "mars.update({'marsWeather': weather})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x23dce847b88>"
+       "{'featuredImage': 'https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA09178_ip.jpg',\n",
+       " 'marsWeather': '\\nSol 1945 (Jan 25, 2018), Sunny, high -22C/-7F, low -78C/-108F, pressure at 7.51 hPa, daylight 05:43-17:28\\n',\n",
+       " 'newsText': 'On a part of \"Vera Rubin Ridge\" where rover-team researchers sought to determine whether dust coatings are hiding rocks\\' hematite content, the Mast Camera (Mastcam) on NASA\\'s Curiosity Mars rover took this image of a rock surface that had been brushed with the rover\\'s Dust Removal Tool.',\n",
+       " 'newsTitle': \"Martian Ridge Brings Out Rover's Color Talents\"}"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "html = urllib.request.urlopen('https://twitter.com/marswxreport?lang=en').read()\n",
-    "soup = bs(html, 'html.parser')\n",
-    "\n",
-    "marsweather_db = db.marsweather\n",
-    "\n",
-    "weather = soup.find(\"div\", class_=\"js-tweet-text-container\").text\n",
-    "text = p.text.strip()\n",
-    "marsweather = {'weather': weather\n",
-    "            }\n",
-    "marsweather_db.insert_one(marsweather)"
+    "mars"
    ]
   },
   {
@@ -254,21 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "marsfacts_db = db.marsfacts\n",
-    "\n",
     "# Import HTML Code\n",
     "url = 'https://space-facts.com/mars/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +292,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -382,86 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>variable</th>\n",
-       "      <th>measurements</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Equatorial Diameter:</td>\n",
-       "      <td>6,792 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Polar Diameter:</td>\n",
-       "      <td>6,752 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mass:</td>\n",
-       "      <td>6.42 x 10^23 kg (10.7% Earth)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Moons:</td>\n",
-       "      <td>2 (Phobos &amp; Deimos)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Orbit Distance:</td>\n",
-       "      <td>227,943,824 km (1.52 AU)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               variable                   measurements\n",
-       "0  Equatorial Diameter:                       6,792 km\n",
-       "1       Polar Diameter:                       6,752 km\n",
-       "2                 Mass:  6.42 x 10^23 kg (10.7% Earth)\n",
-       "3                Moons:            2 (Phobos & Deimos)\n",
-       "4       Orbit Distance:       227,943,824 km (1.52 AU)"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.columns = ['variable','measurements']\n",
-    "df.head()"
+    "df.columns = ['variable','measurements']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -478,20 +341,16 @@
        " 'Surface Temperature:': '-153 to 20 °C'}"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fact_value = zip(fact_list, value_list)\n",
-    "\n",
     "fact_list = df[\"variable\"]\n",
     "value_list = df[\"measurements\"]\n",
-    "\n",
+    "fact_value = zip(fact_list, value_list)\n",
     "table_dic = {}\n",
-    "\n",
-    "\n",
     "for fact, value in fact_value:\n",
     "   table_dic[fact] = value\n",
     "table_dic"
@@ -499,23 +358,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x23dced1fe88>"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "marsfacts_db.insert_one(table_dic)\n"
+    "for fact, value in fact_value:\n",
+    "   mars[fact] = value"
    ]
   },
   {
@@ -527,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -543,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -556,22 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "title = []\n",
     "img_url = []\n",
-    "hemispheres = [\"Cerberus\",\"Schiaparelli\",\"Syrtis\",\"Valles\"]\n",
-    "\n",
-    "# Define database and collection\n",
-    "#db = client.hemispheres_db\n",
-    "hemisphere_db = db.hemispheres "
+    "hemispheres = [\"Cerberus\",\"Schiaparelli\",\"Syrtis\",\"Valles\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,56 +425,35 @@
     "    soup = bs(html, 'html.parser')\n",
     "    img = soup.find(\"div\", class_=\"downloads\").ul.li.a[\"href\"]\n",
     "    text = soup.body.find('h2').text\n",
-    "    post = {'title': text,\n",
-    "            'img_url': img\n",
-    "            }\n",
-    "    hemisphere_db.insert_one(post)\n",
-    "    browser.click_link_by_partial_text('Back')\n",
-    "\n"
+    "    mars.update({text:img})\n",
+    "    browser.click_link_by_partial_text('Back')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'hemispheres_db'), 'hemispheres')"
+       "{'Cerberus Hemisphere Enhanced': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
+       " 'Schiaparelli Hemisphere Enhanced': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
+       " 'Syrtis Major Hemisphere Enhanced': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
+       " 'Valles Marineris Hemisphere Enhanced': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg',\n",
+       " 'featuredImage': 'https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA09178_ip.jpg',\n",
+       " 'marsWeather': '\\nSol 1945 (Jan 25, 2018), Sunny, high -22C/-7F, low -78C/-108F, pressure at 7.51 hPa, daylight 05:43-17:28\\n',\n",
+       " 'newsText': 'On a part of \"Vera Rubin Ridge\" where rover-team researchers sought to determine whether dust coatings are hiding rocks\\' hematite content, the Mast Camera (Mastcam) on NASA\\'s Curiosity Mars rover took this image of a rock surface that had been brushed with the rover\\'s Dust Removal Tool.',\n",
+       " 'newsTitle': \"Martian Ridge Brings Out Rover's Color Talents\"}"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hemisphere_db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5a6a8284a10d9249f0121b1d'), 'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}\n",
-      "{'_id': ObjectId('5a6a8288a10d9249f0121b1e'), 'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}\n",
-      "{'_id': ObjectId('5a6a828da10d9249f0121b1f'), 'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}\n",
-      "{'_id': ObjectId('5a6a8291a10d9249f0121b20'), 'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Display items in MongoDB collection\n",
-    "listings = db.hemispheres.find()\n",
-    "\n",
-    "for listing in listings:\n",
-    "    print(listing)"
+    "mars"
    ]
   },
   {
